# ADS114S0xB_RLR

./: .gitignore  CMakeLists.txt  ReadMe.md
app/: CMakeLists.txt
app/src/: main.cpp
doc/: adc_notes.txt  assignment.txt  commands.txt
driver/: CMakeLists.txt
driver/include/: adc_constants.h  adc_emulator.h  device_driver.h  i_spi_interface.h  spi_emulator.h
driver/src/: adc_emulator.cpp  device_driver.cpp  spi_emulator.cpp
tests/: CMakeLists.txt  test_driver.cpp  test_spi.cpp
